описан swagger для /register /login /me, мимграции исправлены
