# swagger/schemas.js
@@ -1,30 +1,23 @@
-import j2s from "joi-to-swagger";
-
-import {
-    registerBodySchema,
-    loginBodySchema
-} from "../src/resources/auth/validators/httpSchemas.js";
-
-const { swagger: RegisterBody } = j2s(registerBodySchema);
-const { swagger: LoginBody } = j2s(loginBodySchema);
-
 export const schemas = {
-    RegisterBody,
-    LoginBody,
 
-    User: {
-        type: "object",
-        properties: {
-            id: { type: "string", example: "uuid" },
-            email: { type: "string", example: "user@mail.com" },
-            created_at: { type: "string", example: "2026-01-01T10:00:00Z" }
-        }
-    },
+  RegisterBody: {
+    $email: "test@test.com",
+    $password: "Password1"
+  },
 
-    Token: {
-        type: "object",
-        properties: {
-            token: { type: "string", example: "jwt.token.here" }
-        }
-    }
+  LoginBody: {
+    $email: "test@test.com",
+    $password: "Password1"
+  },
+
+  User: {
+    id: "uuid",
+    email: "user@mail.com",
+    created_at: "2026-01-01T10:00:00Z"
+  },
+
+  Token: {
+    token: "jwt.token.here"
+  }
+
 };
